force-app/main/default/objects/Survey_Question__c/fields/Custom_Left_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Left_Text__c</fullName>
    <label>Custom Left Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>