force-app/main/default/objects/Survey_Question__c/fields/Custom_Rating__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Rating</label>
    <type>Checkbox</type>
</CustomField>