force-app/main/default/objects/Survey_Question__c/fields/Dependency_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependency Question</label>
    <type>Checkbox</type>
</CustomField>