force-app/main/default/objects/Survey_Question__c/fields/Is_Initial_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Initial_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initial Question</label>
    <type>Checkbox</type>
</CustomField>