force-app/main/default/objects/Survey_Question__c/fields/Is_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If is related checked, then this question is related to question before</description>
    <label>Is Related</label>
    <type>Checkbox</type>
</CustomField>