force-app/main/default/objects/Survey_Question__c/fields/Real_Number__c.field-meta.xml
<CustomField>
    <fullName>Real_Number__c</fullName>
    <label>Real Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>